--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <ul>
                     <li class="nav-li"><a href="index.html">HOME</a></li>
                     <li class="nav-li"><a href="about.html">ABOUT</a></li>
-                    <li class="nav-li"><a href="store.php">STORE</a></li>
+                    <li class="nav-li"><a href="store.html">STORE</a></li>
                     <li class="nav-li"><a href="contact.html">CONTACT</a></li>
                     <li class="nav-li"><a href="weather.html">WEATHER</a></li>
                     <li class="nav-li"><a href="spots.html">SPOTS</a></li>
